--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
                     </button>
                 </div>
                 <div class="item_link">
-                    <a [routerLink]="['']" class="btn btn_navLink" aria-label="btnNavigation">
+                    <a [routerLink]="['/sumary']" class="btn btn_navLink" aria-label="btnNavigation">
                         <div class="icon_active">
                             <i class="ri-home-3-line"></i>
                         </div>
