--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -5,6 +5,18 @@
               START THE FORM
             ==================================== -->
             <section class="account-section padding-20">
+                  <div class="img-coin-eth" [hidden]="_butler.deviceType=='Escritorio'">
+                        <picture>
+                            <!-- <source srcset="assets/assetsryal/images/logo_07.webp" type="image/webp"> -->
+                            <img src="assets/assetsryal/images/logo_07.png" alt="" style="max-width: 100%;padding: 10%;align-content: center;">
+                        </picture>
+                    </div>
+                  <div class="img-coin-eth" [hidden]="_butler.deviceType!='Escritorio'">
+                        <picture>
+                            <!-- <source srcset="assets/assetsryal/images/logo_07.webp" type="image/webp"> -->
+                            <img src="assets/assetsryal/images/logo_07c.png" alt="" style="max-width: 100%;padding-bottom: 3%;">
+                        </picture>
+                    </div>
                 <div class="display-title">
                     <h1>Inicio de session!</h1>
                     <p>Ingrese su correo y su contrasena para continuar</p>
