--- a/src/app/components/pages/member/member.component.html
+++ b/src/app/components/pages/member/member.component.html
@@ -71,28 +71,23 @@
                     </div>
                     <div class="statistics">
                         <div class="text-grid">
-                            <h4>35</h4>
-                            <p>Items</p>
+                            <h4>5 </h4>
+                            <p>Hoy</p>
                         </div>
                         <div class="text-grid">
-                            <h4>2,3K</h4>
-                            <p>Likes</p>
+                            <h4>23</h4>
+                            <p>esta semana</p>
                         </div>
                         <div class="text-grid">
-                            <h4>8.8K</h4>
-                            <p>Views</p>
-                        </div>
-                        <div class="text-grid">
-                            <h4>48</h4>
-                            <p>Minted</p>
+                            <h4>54</h4>
+                            <p>Mes</p>
                         </div>
 
                     </div>
                     <div class="description">
                         <p>
-                            Camillo lives in Vancouver, British Columbia. When he's not spending his time running around
-                            he is probably
-                            <a class="read-more" data-bs-toggle="modal" data-bs-target="#mdllBioDetails">Read more</a>
+                            A coninuacion un listado de cada ticket de servicio
+                            <a class="read-more" data-bs-toggle="modal" data-bs-target="#mdllBioDetails"></a>
                         </p>
                     </div>
                 </div>
@@ -101,9 +96,9 @@
                         <li class="nav-item" role="presentation">
                             <button class="nav-link active" id="pills-Items-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-Items" type="button" role="tab" aria-controls="pills-Items"
-                                aria-selected="true">Items</button>
+                                aria-selected="true">Servicios prestados</button>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <!-- <li class="nav-item" role="presentation">
                             <button class="nav-link" id="pills-Selling-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-Selling" type="button" role="tab" aria-controls="pills-Selling"
                                 aria-selected="false">Selling</button>
@@ -117,7 +112,7 @@
                             <button class="nav-link" id="pills-Liked-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-Liked" type="button" role="tab" aria-controls="pills-Liked"
                                 aria-selected="false">Liked</button>
-                        </li>
+                        </li> -->
                     </ul>
 
 
