--- a/src/app/components/pages/member/member.component.html
+++ b/src/app/components/pages/member/member.component.html
@@ -66,7 +66,7 @@
                         </div> -->
                         <a 
                             class="btn btn-md-size text-white btn-edit-profile rounded-pill">
-                            Edit Profile
+                            {{_butler.preview.categoria}}
                         </a>
                     </div>
                     <div class="statistics">
@@ -76,7 +76,7 @@
                         </div>
                         <div class="text-grid">
                             <h4>23</h4>
-                            <p>esta semana</p>
+                            <p>Semana</p>
                         </div>
                         <div class="text-grid">
                             <h4>54</h4>
