--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="title-modal">Nuevo ticket</h1>
+                    <h1 class="title-modal">Agregar estilista</h1>
                     <button type="button" class="btn btnClose" data-bs-dismiss="modal" aria-label="Close">
                         <i class="ri-close-fill"></i>
                     </button>
@@ -77,7 +77,7 @@
                 <div class="modal-body">
                     <div class="content-upload-item text-center">
                         <p>
-                            Listado de servicios para el(la) miembro(a) <span>Estilista</span> 
+                            <!-- Listado de servicios para el(la) miembro(a) <span>Estilista</span>  -->
                             <span></span>
                             
                         </p>
@@ -87,6 +87,16 @@
                           <ngx-awesome-uploader class="fondo" #uploader [adapter]="adapter" [enableCropper]="true"     [captions]="captions">
                           </ngx-awesome-uploader >
                         </div>
+                            <div class="form-group">
+                                <label>Espeialidad</label>
+                                <select class="form-select custom-select form-control"
+                                    aria-label="Default select example">
+                                    <option selected>Etilista</option>
+                                    <option value="Sales">Barbero</option>
+                                    <option value="Account">Peluquera</option>
+                                    <option value="NFTs">Otro</option>
+                                </select>
+                            </div>
                             <a 
                                 class="btn btn-create bg-white border border-solid border-snow text-dark margin-b-20">
                                 Servicio unico
