--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,12 +97,12 @@
                                     <option value="NFTs">Otro</option>
                                 </select>
                             </div>
-                            <a 
+                            <<!-- a 
                                 class="btn btn-create bg-white border border-solid border-snow text-dark margin-b-20">
                                 Servicio unico
-                            </a>
+                            </a> -->
                             <a  class="btn btn-create bg-primary text-white margin-b-20">
-                                Multiples servicios
+                                Aceptar
                             </a>
                         </div>
                     </div>
