--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,6 +87,10 @@
                           <ngx-awesome-uploader class="fondo" #uploader [adapter]="adapter" [enableCropper]="true"     [captions]="captions">
                           </ngx-awesome-uploader >
                         </div>
+                         <div class="form-group">
+                    <label>Nombre </label>
+                    <input type="text" class="form-control" placeholder='e. g. David '>
+                </div>
                             <div class="form-group">
                                 <label>Espeialidad</label>
                                 <select class="form-select custom-select form-control"
