--- a/src/app/components/pages/sumary/sumary.component.html
+++ b/src/app/components/pages/sumary/sumary.component.html
@@ -73,8 +73,8 @@
                                 </div>
                                 <h3 class="link-title">Estilistas</h3>
                             </div>
-                            <div class="other-cc">
-                                <span class="badge-text"></span>
+                             <div class="other-cc">
+                                <span class="badge-text"> ({{_butler.especialistasSize}})</span>
                                 <div class="icon-arrow">
                                     <i class="ri-arrow-drop-right-line"></i>
                                 </div>
@@ -142,12 +142,28 @@
                         <a class="nav-link" >
                             <div class="item-content-link">
                                 <div class="icon bg-pink-1 color-pink">
+                                    <i class="ri-shield-star-fill"></i>
+                                </div>
+                                <h3 class="link-title">Especialidades</h3>
+                            </div>
+                            <div class="other-cc">
+                                <span class="badge-text"> ({{_butler.especialidadesSize}})</span>
+                                <div class="icon-arrow">
+                                    <i class="ri-arrow-drop-right-line"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" >
+                            <div class="item-content-link">
+                                <div class="icon bg-pink-1 color-pink">
                                     <i class="ri-brush-fill"></i>
                                 </div>
                                 <h3 class="link-title">Servicios</h3>
                             </div>
                             <div class="other-cc">
-                                <span class="badge-text">Administrar (8)</span>
+                                <span class="badge-text"> ()</span>
                                 <div class="icon-arrow">
                                     <i class="ri-arrow-drop-right-line"></i>
                                 </div>
