--- a/src/app/components/pages/sumary/sumary.component.html
+++ b/src/app/components/pages/sumary/sumary.component.html
@@ -141,7 +141,7 @@
                     <li class="nav-item">
                         <a class="nav-link" >
                             <div class="item-content-link">
-                                <div class="icon bg-pink-1 color-pink">
+                                <div class="icon bg-pink-1 color-yellow">
                                     <i class="ri-shield-star-fill"></i>
                                 </div>
                                 <h3 class="link-title">Especialidades</h3>
