--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -35,26 +35,26 @@
 
                 <div class="content-list-sellers"[hidden]="!_butler.list">
                     <ul class="nav flex-column">
-                        <li class="nav-item" *ngFor="let specialty of specialties$ | async" >
+                        <li class="nav-item" *ngFor="let service of services$ | async" >
                             <div class="nav-link item-user-seller">
                                 <a class="item-user-img"  >
                                  <!--    <picture>
-                                        <source srcset="assets/assetsryal/images/avatar/22.webp" type="{{specialty.images[0]}}">
-                                        <img class="avt-img" src="{{specialty.images[0]}}" alt="">
+                                        <source srcset="assets/assetsryal/images/avatar/22.webp" type="{{service.images[0]}}">
+                                        <img class="avt-img" src="{{service.images[0]}}" alt="">
                                     </picture> -->
                                     <div class="txt-user">
                                         <h5> 
-                                        	<!-- <span>{{specialty.categoria}} </span> -->
+                                        	<!-- <span>{{service.categoria}} </span> -->
                                         </h5>
-                                        <p>{{specialty.name}}
+                                        <p>{{service.name}}
                                          <!-- <i class="ri-checkbox-circle-fill"></i>  -->
                                      </p>
                                     </div>
                                 </a>
                                 <div class="other-option" style="margin-right:2%; cursor: pointer;" data-bs-toggle="modal" data-bs-target="#mdllUploadItem">
                                     <div class="color-text rounded-pill bg-snow btn-xs-size " >
-     <i class="ri-delete-bin-fill text-danger" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
-                                     Borrar</div>
+     <i class="ri-coins-fill text-ligth" style="font-size: 1.3rem; margin-right: 10%; font-weight: initial;"> </i>
+                                     {{service.basePrice}}</div>
                                 </div>
                             </div>
                         </li>
