--- a/src/app/components/pages/specialties/specialties.component.html
+++ b/src/app/components/pages/specialties/specialties.component.html
@@ -17,8 +17,8 @@
                 <!-- un-title-default -->
                 <div class="un-title-default">
                     <div class="text">
-                        <h2>Estilistas</h2>
-                        <p>Seleccione un estilista para ver el detalle o asigne un trabajo</p>
+                        <h2>Especialidades</h2>
+                        <!-- <p>Seleccione un estilista para ver el detalle o asigne un trabajo</p> -->
                     </div>
                     <div class="un-block-right">
                         <a class="icon-back" aria-label="iconBtn" [hidden]="!_butler.list || _butler.deviceType!='Escritorio'"  >
