--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -33,7 +33,7 @@
    <!--  -->
 
 
-                <div class="content-list-sellers"[hidden]="!_butler.list">
+                <div class="content-list-sellers">
                     <ul class="nav flex-column">
                         <li class="nav-item" *ngFor="let service of services$ | async" >
                             <div class="nav-link item-user-seller">
