--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,13 +22,13 @@
                 </div>
               <div class="item_link">
                     <button type="button" name="uploadItem" aria-label="uploadItem" disabled [hidden]="router.url.includes('estilistas')"
-                        class="btn btn_navLink without_active" data-bs-toggle="modal" data-bs-target="#mdllUploadItem"
+                        class="btn btn_navLink without_active" data-bs-toggle="modal" data-bs-target="#mdllUploadItem" 
                         aria-label="btnNavigation">
                         <div class="btn btnCircle_default">
                             <i class="ri-add-line"></i>
                         </div>
                     </button>
-                    <button type="button" name="uploadItem" aria-label="uploadItem"  [hidden]="!router.url.includes('estilistas')"
+                    <button (click)="openModal(1)" type="button" name="uploadItem" aria-label="uploadItem"  [hidden]="!router.url.includes('estilistas')"
                         class="btn btn_navLink without_active" data-bs-toggle="modal" data-bs-target="#mdllUploadItem"
                         aria-label="btnNavigation">
                         <div class="btn btnCircle_default">
@@ -62,16 +62,16 @@
     ==================================== -->
     <div class="modal transition-bottom screenFull defaultModal mdlladd__rate fade" id="mdllUploadItem" tabindex="-1"
         aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="title-modal">Agregar estilista</h1>
+        <div class="modal-dialog" >
+            <div class="modal-content" >
+                <div class="modal-header" >
+                    <h1 class="title-modal" [hidden]="_butler.modalOption!=1">Agregar estilista</h1>                    <h1 class="title-modal" [hidden]="_butler.modalOption!=2">Nuevo ticket</h1>
                     <button type="button" class="btn btnClose" data-bs-dismiss="modal" aria-label="Close">
                         <i class="ri-close-fill"></i>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="content-upload-item text-center">
+                    <div class="content-upload-item text-center" [hidden]="_butler.modalOption!=1">
                         <p>
                          <span></span>
                         </p>
@@ -106,6 +106,23 @@
                                     </a>
                                 </div>
                             </div>                  
+                        </div>
+                    </div> 
+                 
+                     <div class="content-upload-item text-center" [hidden]="_butler.modalOption!=2">
+                        <p>
+                            Seleccione <span style="font-weight: 900;"> "servicio unico"</span> si solo desea registrar la venta de un servicio, Seleccione 
+                            <span style="font-weight: 900;"> "Multiples servicios"</span>
+                            si desea registrar la venta de multiples servicios
+                        </p>
+                        <div class="grid_buttonUpload">
+                            <a href="page-create-single.html" class="btn btn-create bg-primary text-white margin-b-20">
+                               Servicio Unico 
+                            </a>
+                            <a href="page-create-multi.html"
+                                class="btn btn-create bg-white border border-solid border-snow text-dark">
+                                Multiples servicios
+                            </a>
                         </div>
                     </div>
                 </div>
